--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Rambo Lacrosse</title>
+    <title>MS Lacrosse</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Rambo Lacrosse</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">MS Lacrosse</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -52,18 +52,18 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/rambo.png" alt="">
+        <img class="img-fluid" src="img/martin.png" alt="">
         <div class="intro-text">
-          <span class="name">Rambo Lacrosse</span>
+          <span class="name">Mike Simon</span>
           <hr class="star-light">
-          <span class="skills">The best instruction in the game</span>
+          <span class="skills">Pro lacrosse player & instructor</span>
         </div>
       </div>
     </header>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" >
-      <div class="container" background = "img/rambo.png">
+      <div class="container" background = "img/martin.png">
         <h2 class="text-center">Private Lessons</h2>
         <hr class="star-primary">
         <div class="row">
@@ -151,7 +151,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="text-center">Contact Matt</h2>
+        <h2 class="text-center">Contact Mike</h2>
         <hr class="star-primary">
         <div class="row">
           <div class="col-lg-8 mx-auto">
